# masters-project

./: .gitignore  README.md  pyproject.toml
config/: pipeline.json
notebooks/: 01_baseline_model.py  mining_goes_s3.py  mining_sonda.py
src/masters_project/: __init__.py  build_features.py  config.py  enums.py  file_paths.py  main.py  settings.py  utils.py
src/masters_project/clients/: goes_s3.py  sonda.py
src/masters_project/loaders/: base.py  csv.py  json.py  parquet.py
src/masters_project/models/: base.py  evaluate.py  factory.py  model.py  tuning.py
src/masters_project/pipeline/: build_dataset.py  build_features.py  dataset_prep.py  etl_goes_s3.py  etl_sonda_by_year.py  etl_sonda_by_year_month.py  goes_s3.py  run_training.py  run_tuning.py  sonda_by_year.py  sonda_by_year_month.py
src/masters_project/processors/: goes.py  merger.py  sonda.py
tests/: test_clients.py  test_factory.py  test_file_paths.py  test_goes_processor.py  test_loaders.py  test_merger.py  test_sonda_processor.py  test_utils.py
