[project]
name = "masters-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joao Victor", email = "joao.victor@delfosim.com" }
]
requires-python = ">=3.14"
dependencies = [
    "h5netcdf>=1.8.1",
    "h5py>=3.15.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "s3fs>=2026.2.0",
    "tqdm>=4.67.3",
    "xarray>=2026.2.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
]
